Fixed the broken styles

--- a/source/style/partials/forms/_form__auth.scss
+++ b/source/style/partials/forms/_form__auth.scss
@@ -26,7 +26,7 @@
 
 .form {
   &__input {
-    padding: 5px 60px 5px 20px;
+    padding: 5px 20px 5px 60px;
     height: 45px;
     width: 100%;
 
